src/mock-data/data-big/samples/02-ingress-isolated-ns/02-ingress-isolated-ns-01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-ingress-isolated-ns-02
  labels:
    name: test-ingress-isolated-ns-02
