src/mock-data/data-big/samples/02-ingress-isolated-ns/02-ingress-isolated-ns-03-deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: test-ingress-isolated-ns-02
spec:
  podSelector:
    matchLabels: {}
